--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,189 @@
-albumentations==0.5.2
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1605217007488/work
-async-generator==1.10
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1605083924122/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1616843134209/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1612213472466/work
-brotlipy==0.7.0
-certifi==2020.12.5
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1606236112419/work
-chardet @ file:///tmp/build/80754af9/chardet_1607706775000/work
-click @ file:///home/linux1/recipes/ci/click_1610990599742/work
-cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1598400192773/work
-cryptography @ file:///tmp/build/80754af9/cryptography_1616767007030/work
-cycler==0.10.0
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1617520196422/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
-Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
-Flask-CacheBuster==1.0.0
-Flask-WTF==0.14.3
-future @ file:///home/conda/feedstock_root/build_artifacts/future_1610147348427/work
-gym @ file:///home/conda/feedstock_root/build_artifacts/gym_1608551779699/work
-h5py @ file:///tmp/build/80754af9/h5py_1608649014695/work
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-imageio==2.9.0
-imgaug==0.4.0
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1617116803153/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1617137058847/work/dist/ipykernel-5.5.3-py3-none-any.whl
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1616836850526/work
-ipython-genutils==0.2.0
-itsdangerous @ file:///home/ktietz/src/ci/itsdangerous_1611932585308/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1610146787869/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1614815863336/work
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1615693636836/work
-jupyter-core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1612125253154/work
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
-kiwisolver==1.3.1
-MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1607027305082/work
-matplotlib==3.4.1
-mistune @ file:///home/conda/feedstock_root/build_artifacts/mistune_1605115652595/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1614336084111/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert_1605401842418/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1617383142101/work
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1617163391303/work
-networkx==2.5.1
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1616419148472/work
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1604945996870/work
-opencv-python==4.5.1.48
-opencv-python-headless==4.5.1.48
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1612459636436/work
-pandas==1.2.4
-pandocfilters==1.4.2
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1617148930513/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow==8.2.0
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1617387394212/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1616432837031/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-pyglet @ file:///home/conda/feedstock_root/build_artifacts/pyglet_1618311515322/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1615243893546/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing==2.4.7
-pyrsistent @ file:///home/conda/feedstock_root/build_artifacts/pyrsistent_1605115581794/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
-python-dateutil==2.8.1
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-PyWavelets==1.1.1
-PyYAML==5.4.1
-pyzmq==20.0.0
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-scikit-image==0.18.1
-scipy==1.6.2
-Send2Trash==1.5.0
-Shapely==1.7.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
-terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1617048651963/work
-testpath==0.4.4
-tifffile==2021.3.31
-timm==0.4.5
-torch==1.8.1
-torch-same-pad @ git+https://github.com/CyberZHG/torch-same-pad.git@b60965823567046d0c100fa0e29e36cab6c4ae6b
-torchvision==0.9.1
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1604105020806/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1602771532708/work
-typing-extensions==3.7.4.3
-urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
-webencodings==0.5.1
-Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
-WTForms @ file:///tmp/build/80754af9/wtforms_1597707484216/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1614945704755/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+albumentations=0.5.2=pypi_0
+argon2-cffi=20.1.0=py39hbd71b63_2
+async_generator=1.10=py_0
+attrs=20.3.0=pyhd3deb0d_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.3=pyhd8ed1ab_0
+bleach=3.3.0=pyh44b312d_0
+brotlipy=0.7.0=py39h27cfd23_1003
+bzip2=1.0.8=h516909a_3
+ca-certificates=2021.4.13=h06a4308_1
+cairo=1.16.0=h3fc0475_1005
+certifi=2020.12.5=py39h06a4308_0
+cffi=1.14.4=py39he88106c_0
+chardet=4.0.0=py39h06a4308_1003
+click=7.1.2=pyhd3eb1b0_0
+cloudpickle=1.6.0=py_0
+cryptography=3.4.7=py39hd23ed53_0
+cycler=0.10.0=pypi_0
+dbus=1.13.6=he372182_0
+decorator=4.4.2=pypi_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+entrypoints=0.3=pyhd8ed1ab_1003
+expat=2.2.9=he1b5a44_2
+ffmpeg=4.3.1=h3215721_1
+flask=1.1.2=pyhd3eb1b0_0
+flask-cachebuster=1.0.0=pypi_0
+flask-wtf=0.14.3=py_0
+fontconfig=2.13.1=h7e3eb15_1002
+freetype=2.10.4=h7ca028e_0
+future=0.18.2=py39hf3d152e_3
+gettext=0.19.8.1=hf34092f_1004
+glib=2.66.1=h680cd38_0
+gmp=6.2.1=h58526e2_0
+gnutls=3.6.13=h85f3911_1
+graphite2=1.3.13=h58526e2_1001
+gst-plugins-base=1.14.5=h0935bb2_2
+gstreamer=1.14.5=h36ae1b5_2
+gym=0.18.0=py39hef51801_0
+h5py=2.10.0=py39hec9cf62_0
+harfbuzz=2.7.2=hee91db6_0
+hdf5=1.10.6=nompi_h3c11f04_101
+icu=67.1=he1b5a44_0
+idna=2.10=pyhd3eb1b0_0
+imageio=2.9.0=pypi_0
+imgaug=0.4.0=pypi_0
+importlib-metadata=3.10.0=py39hf3d152e_0
+ipykernel=5.5.3=py39hef51801_0
+ipython=7.22.0=py39hef51801_0
+ipython_genutils=0.2.0=py_1
+itsdangerous=1.1.0=pyhd3eb1b0_0
+jasper=1.900.1=h07fcdf6_1006
+jedi=0.18.0=py39hf3d152e_2
+jinja2=2.11.3=pyhd3eb1b0_0
+jpeg=9d=h36c2ea0_0
+jsonschema=3.2.0=pyhd8ed1ab_3
+jupyter_client=6.1.12=pyhd8ed1ab_0
+jupyter_core=4.7.1=py39hf3d152e_0
+jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+kiwisolver=1.3.1=pypi_0
+krb5=1.17.2=h926e7f8_0
+lame=3.100=h14c3975_1001
+ld_impl_linux-64=2.33.1=h53a641e_7
+libblas=3.9.0=8_openblas
+libcblas=3.9.0=8_openblas
+libclang=10.0.1=default_hde54327_1
+libedit=3.1.20191231=he28a2e2_2
+libevent=2.1.10=hcdb4288_3
+libffi=3.2.1=he1b5a44_1007
+libgcc-ng=9.1.0=hdf63c60_0
+libgfortran-ng=7.5.0=h14aa051_18
+libgfortran4=7.5.0=h14aa051_18
+libiconv=1.16=h516909a_0
+liblapack=3.9.0=8_openblas
+liblapacke=3.9.0=8_openblas
+libllvm10=10.0.1=he513fc3_3
+libopenblas=0.3.12=pthreads_hb3c22a3_1
+libopencv=4.5.0=py39_3
+libpng=1.6.37=h21135ba_2
+libpq=12.3=h255efa7_3
+libsodium=1.0.18=h36c2ea0_1
+libstdcxx-ng=9.1.0=hdf63c60_0
+libtiff=4.1.0=h4f3a223_6
+libuuid=2.32.1=h14c3975_1000
+libwebp-base=1.1.0=h36c2ea0_3
+libxcb=1.13=h14c3975_1002
+libxkbcommon=0.10.0=he1b5a44_0
+libxml2=2.9.10=h68273f3_2
+lz4-c=1.9.2=he1b5a44_3
+markupsafe=1.1.1=py39h27cfd23_0
+matplotlib=3.4.1=pypi_0
+mistune=0.8.4=py39hbd71b63_1002
+mysql-common=8.0.21=2
+mysql-libs=8.0.21=hf3661c5_2
+nbclient=0.5.3=pyhd8ed1ab_0
+nbconvert=6.0.7=py39hf3d152e_3
+nbformat=5.1.3=pyhd8ed1ab_0
+ncurses=6.2=he6710b0_1
+nest-asyncio=1.5.1=pyhd8ed1ab_0
+nettle=3.6=he412f7d_0
+networkx=2.5.1=pypi_0
+notebook=6.3.0=py39hf3d152e_0
+nspr=4.29=he1b5a44_1
+nss=3.59=h2c00c37_0
+numpy=1.19.4=py39h57d35e7_1
+opencv=4.5.0=py39_3
+opencv-python=4.5.1.48=pypi_0
+opencv-python-headless=4.5.1.48=pypi_0
+openh264=2.1.1=h8b12597_0
+openssl=1.1.1k=h27cfd23_0
+packaging=20.9=pyh44b312d_0
+pandas=1.2.4=py39h2531618_0
+pandoc=2.12=h7f98852_0
+pandocfilters=1.4.2=py_1
+parso=0.8.2=pyhd8ed1ab_0
+pcre=8.44=he1b5a44_0
+pexpect=4.8.0=pyh9f0ad1d_2
+pickleshare=0.7.5=py_1003
+pillow=8.2.0=pypi_0
+pip=21.0.1=py39h06a4308_0
+pixman=0.38.0=h516909a_1003
+prometheus_client=0.10.0=pyhd8ed1ab_0
+prompt-toolkit=3.0.18=pyha770c72_0
+pthread-stubs=0.4=h36c2ea0_1001
+ptyprocess=0.7.0=pyhd3deb0d_0
+py-opencv=4.5.0=py39hef51801_3
+pycparser=2.20=pyh9f0ad1d_2
+pyglet=1.5.16=py39hf3d152e_0
+pygments=2.8.1=pyhd8ed1ab_0
+pyopenssl=20.0.1=pyhd3eb1b0_1
+pyparsing=2.4.7=pyh9f0ad1d_0
+pyrsistent=0.17.3=py39hbd71b63_1
+pysocks=1.7.1=py39h06a4308_0
+python=3.9.0=h2a148a8_4_cpython
+python-dateutil=2.8.1=py_0
+python_abi=3.9=1_cp39
+pytz=2021.1=pyhd3eb1b0_0
+pywavelets=1.1.1=pypi_0
+pyyaml=5.4.1=pypi_0
+pyzmq=20.0.0=py39h25affbc_1
+qt=5.12.9=h1f2b2cb_0
+readline=8.1=h27cfd23_0
+requests=2.25.1=pyhd3eb1b0_0
+scikit-image=0.18.1=pypi_0
+scipy=1.6.2=pypi_0
+send2trash=1.5.0=py_0
+setuptools=52.0.0=py39h06a4308_0
+shapely=1.7.1=pypi_0
+six=1.15.0=pyh9f0ad1d_0
+sqlite=3.35.3=hdfb4753_0
+terminado=0.9.4=py39hf3d152e_0
+testpath=0.4.4=py_0
+tifffile=2021.3.31=pypi_0
+timm=0.4.5=pypi_0
+tk=8.6.10=hbc83047_0
+torch=1.8.1=pypi_0
+torch-same-pad=0.1.0=pypi_0
+torchvision=0.9.1=pypi_0
+tornado=6.1=py39hbd71b63_0
+traitlets=5.0.5=py_0
+typing-extensions=3.7.4.3=pypi_0
+tzdata=2020f=h52ac0ba_0
+urllib3=1.26.4=pyhd3eb1b0_0
+wcwidth=0.2.5=pyh9f0ad1d_2
+webencodings=0.5.1=py_1
+werkzeug=1.0.1=pyhd3eb1b0_0
+wheel=0.36.2=pyhd3eb1b0_0
+wtforms=2.3.3=py_0
+x264=1!152.20180806=h14c3975_0
+xorg-kbproto=1.0.7=h14c3975_1002
+xorg-libice=1.0.10=h516909a_0
+xorg-libsm=1.2.3=h84519dc_1000
+xorg-libx11=1.6.12=h516909a_0
+xorg-libxau=1.0.9=h14c3975_0
+xorg-libxdmcp=1.1.3=h516909a_0
+xorg-libxext=1.3.4=h516909a_0
+xorg-libxrender=0.9.10=h516909a_1002
+xorg-renderproto=0.11.1=h14c3975_1002
+xorg-xextproto=7.3.0=h14c3975_1002
+xorg-xproto=7.0.31=h14c3975_1007
+xz=5.2.5=h7b6447c_0
+zeromq=4.3.3=h58526e2_3
+zipp=3.4.1=pyhd8ed1ab_0
+zlib=1.2.11=h7b6447c_3
+zstd=1.4.5=h6597ccf_2
