--- a/requirements.txt
+++ b/requirements.txt
@@ -1,189 +1,98 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-albumentations=0.5.2=pypi_0
-argon2-cffi=20.1.0=py39hbd71b63_2
-async_generator=1.10=py_0
-attrs=20.3.0=pyhd3deb0d_0
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.3=pyhd8ed1ab_0
-bleach=3.3.0=pyh44b312d_0
-brotlipy=0.7.0=py39h27cfd23_1003
-bzip2=1.0.8=h516909a_3
-ca-certificates=2021.4.13=h06a4308_1
-cairo=1.16.0=h3fc0475_1005
-certifi=2020.12.5=py39h06a4308_0
-cffi=1.14.4=py39he88106c_0
-chardet=4.0.0=py39h06a4308_1003
-click=7.1.2=pyhd3eb1b0_0
-cloudpickle=1.6.0=py_0
-cryptography=3.4.7=py39hd23ed53_0
-cycler=0.10.0=pypi_0
-dbus=1.13.6=he372182_0
-decorator=4.4.2=pypi_0
-defusedxml=0.7.1=pyhd8ed1ab_0
-entrypoints=0.3=pyhd8ed1ab_1003
-expat=2.2.9=he1b5a44_2
-ffmpeg=4.3.1=h3215721_1
-flask=1.1.2=pyhd3eb1b0_0
-flask-cachebuster=1.0.0=pypi_0
-flask-wtf=0.14.3=py_0
-fontconfig=2.13.1=h7e3eb15_1002
-freetype=2.10.4=h7ca028e_0
-future=0.18.2=py39hf3d152e_3
-gettext=0.19.8.1=hf34092f_1004
-glib=2.66.1=h680cd38_0
-gmp=6.2.1=h58526e2_0
-gnutls=3.6.13=h85f3911_1
-graphite2=1.3.13=h58526e2_1001
-gst-plugins-base=1.14.5=h0935bb2_2
-gstreamer=1.14.5=h36ae1b5_2
-gym=0.18.0=py39hef51801_0
-h5py=2.10.0=py39hec9cf62_0
-harfbuzz=2.7.2=hee91db6_0
-hdf5=1.10.6=nompi_h3c11f04_101
-icu=67.1=he1b5a44_0
-idna=2.10=pyhd3eb1b0_0
-imageio=2.9.0=pypi_0
-imgaug=0.4.0=pypi_0
-importlib-metadata=3.10.0=py39hf3d152e_0
-ipykernel=5.5.3=py39hef51801_0
-ipython=7.22.0=py39hef51801_0
-ipython_genutils=0.2.0=py_1
-itsdangerous=1.1.0=pyhd3eb1b0_0
-jasper=1.900.1=h07fcdf6_1006
-jedi=0.18.0=py39hf3d152e_2
-jinja2=2.11.3=pyhd3eb1b0_0
-jpeg=9d=h36c2ea0_0
-jsonschema=3.2.0=pyhd8ed1ab_3
-jupyter_client=6.1.12=pyhd8ed1ab_0
-jupyter_core=4.7.1=py39hf3d152e_0
-jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-kiwisolver=1.3.1=pypi_0
-krb5=1.17.2=h926e7f8_0
-lame=3.100=h14c3975_1001
-ld_impl_linux-64=2.33.1=h53a641e_7
-libblas=3.9.0=8_openblas
-libcblas=3.9.0=8_openblas
-libclang=10.0.1=default_hde54327_1
-libedit=3.1.20191231=he28a2e2_2
-libevent=2.1.10=hcdb4288_3
-libffi=3.2.1=he1b5a44_1007
-libgcc-ng=9.1.0=hdf63c60_0
-libgfortran-ng=7.5.0=h14aa051_18
-libgfortran4=7.5.0=h14aa051_18
-libiconv=1.16=h516909a_0
-liblapack=3.9.0=8_openblas
-liblapacke=3.9.0=8_openblas
-libllvm10=10.0.1=he513fc3_3
-libopenblas=0.3.12=pthreads_hb3c22a3_1
-libopencv=4.5.0=py39_3
-libpng=1.6.37=h21135ba_2
-libpq=12.3=h255efa7_3
-libsodium=1.0.18=h36c2ea0_1
-libstdcxx-ng=9.1.0=hdf63c60_0
-libtiff=4.1.0=h4f3a223_6
-libuuid=2.32.1=h14c3975_1000
-libwebp-base=1.1.0=h36c2ea0_3
-libxcb=1.13=h14c3975_1002
-libxkbcommon=0.10.0=he1b5a44_0
-libxml2=2.9.10=h68273f3_2
-lz4-c=1.9.2=he1b5a44_3
-markupsafe=1.1.1=py39h27cfd23_0
-matplotlib=3.4.1=pypi_0
-mistune=0.8.4=py39hbd71b63_1002
-mysql-common=8.0.21=2
-mysql-libs=8.0.21=hf3661c5_2
-nbclient=0.5.3=pyhd8ed1ab_0
-nbconvert=6.0.7=py39hf3d152e_3
-nbformat=5.1.3=pyhd8ed1ab_0
-ncurses=6.2=he6710b0_1
-nest-asyncio=1.5.1=pyhd8ed1ab_0
-nettle=3.6=he412f7d_0
-networkx=2.5.1=pypi_0
-notebook=6.3.0=py39hf3d152e_0
-nspr=4.29=he1b5a44_1
-nss=3.59=h2c00c37_0
-numpy=1.19.4=py39h57d35e7_1
-opencv=4.5.0=py39_3
-opencv-python=4.5.1.48=pypi_0
-opencv-python-headless=4.5.1.48=pypi_0
-openh264=2.1.1=h8b12597_0
-openssl=1.1.1k=h27cfd23_0
-packaging=20.9=pyh44b312d_0
-pandas=1.2.4=py39h2531618_0
-pandoc=2.12=h7f98852_0
-pandocfilters=1.4.2=py_1
-parso=0.8.2=pyhd8ed1ab_0
-pcre=8.44=he1b5a44_0
-pexpect=4.8.0=pyh9f0ad1d_2
-pickleshare=0.7.5=py_1003
-pillow=8.2.0=pypi_0
-pip=21.0.1=py39h06a4308_0
-pixman=0.38.0=h516909a_1003
-prometheus_client=0.10.0=pyhd8ed1ab_0
-prompt-toolkit=3.0.18=pyha770c72_0
-pthread-stubs=0.4=h36c2ea0_1001
-ptyprocess=0.7.0=pyhd3deb0d_0
-py-opencv=4.5.0=py39hef51801_3
-pycparser=2.20=pyh9f0ad1d_2
-pyglet=1.5.16=py39hf3d152e_0
-pygments=2.8.1=pyhd8ed1ab_0
-pyopenssl=20.0.1=pyhd3eb1b0_1
-pyparsing=2.4.7=pyh9f0ad1d_0
-pyrsistent=0.17.3=py39hbd71b63_1
-pysocks=1.7.1=py39h06a4308_0
-python=3.9.0=h2a148a8_4_cpython
-python-dateutil=2.8.1=py_0
-python_abi=3.9=1_cp39
-pytz=2021.1=pyhd3eb1b0_0
-pywavelets=1.1.1=pypi_0
-pyyaml=5.4.1=pypi_0
-pyzmq=20.0.0=py39h25affbc_1
-qt=5.12.9=h1f2b2cb_0
-readline=8.1=h27cfd23_0
-requests=2.25.1=pyhd3eb1b0_0
-scikit-image=0.18.1=pypi_0
-scipy=1.6.2=pypi_0
-send2trash=1.5.0=py_0
-setuptools=52.0.0=py39h06a4308_0
-shapely=1.7.1=pypi_0
-six=1.15.0=pyh9f0ad1d_0
-sqlite=3.35.3=hdfb4753_0
-terminado=0.9.4=py39hf3d152e_0
-testpath=0.4.4=py_0
-tifffile=2021.3.31=pypi_0
-timm=0.4.5=pypi_0
-tk=8.6.10=hbc83047_0
-torch=1.8.1=pypi_0
-torch-same-pad=0.1.0=pypi_0
-torchvision=0.9.1=pypi_0
-tornado=6.1=py39hbd71b63_0
-traitlets=5.0.5=py_0
-typing-extensions=3.7.4.3=pypi_0
-tzdata=2020f=h52ac0ba_0
-urllib3=1.26.4=pyhd3eb1b0_0
-wcwidth=0.2.5=pyh9f0ad1d_2
-webencodings=0.5.1=py_1
-werkzeug=1.0.1=pyhd3eb1b0_0
-wheel=0.36.2=pyhd3eb1b0_0
-wtforms=2.3.3=py_0
-x264=1!152.20180806=h14c3975_0
-xorg-kbproto=1.0.7=h14c3975_1002
-xorg-libice=1.0.10=h516909a_0
-xorg-libsm=1.2.3=h84519dc_1000
-xorg-libx11=1.6.12=h516909a_0
-xorg-libxau=1.0.9=h14c3975_0
-xorg-libxdmcp=1.1.3=h516909a_0
-xorg-libxext=1.3.4=h516909a_0
-xorg-libxrender=0.9.10=h516909a_1002
-xorg-renderproto=0.11.1=h14c3975_1002
-xorg-xextproto=7.3.0=h14c3975_1002
-xorg-xproto=7.0.31=h14c3975_1007
-xz=5.2.5=h7b6447c_0
-zeromq=4.3.3=h58526e2_3
-zipp=3.4.1=pyhd8ed1ab_0
-zlib=1.2.11=h7b6447c_3
-zstd=1.4.5=h6597ccf_2
+albumentations==0.5.2
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.3
+bleach==3.3.0
+brotlipy==0.7.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cloudpickle==1.6.0
+cryptography==3.4.7
+cycler==0.10.0
+decorator==5.0.5
+defusedxml==0.7.1
+entrypoints==0.3
+Flask==1.1.2
+Flask-CacheBuster==1.0.0
+Flask-WTF==0.14.3
+future==0.18.2
+gym==0.18.0
+h5py==2.10.0
+idna==2.10
+imageio==2.9.0
+imgaug==0.4.0
+importlib-metadata==3.10.0
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.3
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+kiwisolver==1.3.1
+MarkupSafe==1.1.1
+matplotlib==3.4.1
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5.1
+notebook==6.3.0
+numpy==1.19.4
+opencv-python==4.5.1.48
+opencv-python-headless==4.5.1.48
+packaging==20.9
+pandas==1.2.4
+pandocfilters==1.4.2
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
+pip==21.0.1
+prometheus-client==0.10.0
+prompt-toolkit==3.0.18
+ptyprocess==0.7.0
+pycparser==2.20
+pyglet==1.5.16
+Pygments==2.8.1
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytz==2021.1
+PyWavelets==1.1.1
+PyYAML==5.4.1
+pyzmq==20.0.0
+requests==2.25.1
+scikit-image==0.18.1
+scipy==1.6.2
+Send2Trash==1.5.0
+setuptools==52.0.0.post20210125
+Shapely==1.7.1
+six==1.15.0
+terminado==0.9.4
+testpath==0.4.4
+tifffile==2021.3.31
+timm==0.4.5
+torch==1.8.1
+torch-same-pad==0.1.0
+torchvision==0.9.1
+tornado==6.1
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+wheel==0.36.2
+WTForms==2.3.3
+zipp==3.4.1
