--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ requests==2.25.1
 scikit-image==0.18.1
 scipy==1.6.2
 Send2Trash==1.5.0
-setuptools==52.0.0.post20210125
+setuptools==52.0.0
 Shapely==1.7.1
 six==1.15.0
 terminado==0.9.4
